# airas-20251113-065742-Improve-Test-Time-Ad-a

./: pyproject.toml
.research/: research_history.json
.research/latex/agents4science_2025/: paper.tex  references.bib
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_bibfile_subgraph/: filter_references.txt
.research/prompt/create_code_subgraph/: derive_specific_experiments_exp-1-cifar-core.txt  derive_specific_experiments_exp-2-imagenet-robust.txt  generate_base_code.txt  validate_base_code.txt  validate_experiment_code_exp-1-cifar-core.txt  validate_experiment_code_exp-2-imagenet-robust.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_strategy.txt  generate_experiments.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/evaluate_experimental_consistency_subgraph/: evaluate_experimental_consistency_exp-1-cifar-core.txt  evaluate_experimental_consistency_exp-2-imagenet-robust.txt
.research/prompt/generate_queries_subgraph/: generate_queries.txt
.research/prompt/latex_subgraph/: convert_to_latex_str.txt
.research/prompt/retrieve_code_subgraph/: extract_experimental_info_1.txt  extract_github_url_from_text_1.txt
.research/prompt/retrieve_hugging_face_subgraph/: extract_code_in_readme_dataset_0.txt  extract_code_in_readme_model_0.txt
.research/prompt/review_paper_subgraph/: review_paper.txt
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+1 files in other folders)
