[project]
name = "adaent-tta-experiments"
version = "0.1.0"
description = "AdaEnt Test-time Adaptation experiments"
requires-python = ">=3.10"

[project.dependencies]
torch = ">=2.0.0"
torchvision = "*"
pyyaml = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
pandas = "*"
scikit-learn = "*"
datasets = "*"
Pillow = "*"
